changes in viteconfig file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://JK123Kant.github.io/EmployeeTask",
+  "homepage": "https://JK123kant.github.io/EmployeeTask",
   "name": "employeetask",
   "private": true,
   "version": "0.0.0",
